@@ -4,6 +4,7 @@ V.Next
 - [MINOR] Return Family ID in LocalAuthenticationResult (#2479)
 - [PATCH] Move MS STS Response handling to separate class (#2471)
 - [MINOR] Add support for email OTP MFA in native authentication (#2468)
+- [MINOR] Moving OS version check for passkeys (#2450)
 
 Version 17.7.0
 ---------
